Add FlashcardsController and implement saveFlashcards method